alignment fixes

--- a/style.scss
+++ b/style.scss
@@ -306,6 +306,7 @@ footer {
 
 	p {
 		font-size: 0.825rem;
+		letter-spacing: 0.1px;
 	}
 
 	.container {
@@ -317,7 +318,7 @@ footer {
 	}
 	
 	.card {
-		margin-bottom: 2rem;
+		margin-bottom: 2rem !important;
 	}
 }
 
